@@ -1,0 +1,1 @@
+set GCC_UNDER_TEST {@CC@}
